# Dynamic-Pricing-MLOps

backend/: README.md  pyproject.toml
backend/app/: audit.py  config.py  feature_pipeline.py  logging_config.py  main.py  model_loader.py  schemas.py
backend/dynamic_pricing_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_main.py
model/dynamic-pricing/: .gitignore  README.md  pyproject.toml  requirements.txt
model/dynamic-pricing/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
model/dynamic-pricing/catboost_info/learn/: events.out.tfevents
model/dynamic-pricing/conf/: logging.yml
model/dynamic-pricing/conf/base/: catalog.yml  mlflow.yml  parameters.yml
model/dynamic-pricing/data/02_intermediate/: data_with_ratio.parquet  encoded_ride_data.parquet  range_validated_ride_data.parquet
model/dynamic-pricing/data/03_primary/: cleaned_ride_data.parquet
model/dynamic-pricing/data/04_feature/: categorical_encoder.pickle  feature_table.parquet
model/dynamic-pricing/data/06_models/: baseline_model.pickle  catboost_model.pickle  lightgbm_model.pickle  xgboost_model.pickle
model/dynamic-pricing/data/08_reporting/: data_processing_quality_report.csv  model_comparison_table.csv  training_summary.json
model/dynamic-pricing/docs/source/: conf.py  index.rst
model/dynamic-pricing/notebooks/: modeling.ipynb
model/dynamic-pricing/src/dynamic_pricing/: __init__.py  __main__.py  pipeline_registry.py  settings.py
model/dynamic-pricing/src/dynamic_pricing/pipelines/data_processing/: __init__.py  documentation.md  nodes.py  pipeline.py
model/dynamic-pricing/src/dynamic_pricing/pipelines/feature_engineering/: README.md  __init__.py  nodes.py  pipeline.py
model/dynamic-pricing/src/dynamic_pricing/pipelines/inference/: README.md  __init__.py  nodes.py  pipeline.py
model/dynamic-pricing/src/dynamic_pricing/pipelines/training/: README.md  __init__.py  nodes.py  pipeline.py
model/dynamic-pricing/tests/pipelines/data_processing/: test_integration.py
model/dynamic-pricing/tests/pipelines/test_data_processing/: test_nodes.py
model/dynamic-pricing/tests/pipelines/test_feature_engineering/: test_integration.py  test_nodes.py
model/dynamic-pricing/tests/pipelines/test_inference/: test_integration.py  test_nodes.py
model/dynamic-pricing/tests/pipelines/test_training/: test_integration.py  test_nodes.py
