[project]
name = "dynamic-pricing-backend"
version = "1.0.0"
description = "FastAPI serving layer for the dynamic pricing model."
requires-python = ">=3.12.13"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "catboost>=1.2.7",
]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
