[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.12.13"
name = "dynamic_pricing"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.5.0",
    "kedro-datasets[pandas,pickle]>=3.0",
    "kedro-mlflow>=0.13",
    "mlflow>=2.18.0",
    "prefect>=3.1.14",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pyarrow>=15.0",
    "mlflow>=2.12",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "catboost>=1.2.7",
    "numba>=0.61",
    "shap>=0.48",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "optuna>=4.1.0",
    "statsmodels>=0.14.6",
    "pytest>=7.4.4",
    "kedro-viz>=12.4.0",
]

[project.scripts]
"dynamic-pricing" = "dynamic_pricing.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1"
]
dev = [
    "pytest-cov>=3,<7",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.12.0"
]

[tool.setuptools.dynamic]
version = {attr = "dynamic_pricing.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "dynamic_pricing"
project_name = "dynamic-pricing"
kedro_init_version = "1.5.0"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/dynamic_pricing -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long

[tool.kedro_telemetry]
project_id = "c42e979146fc47a88bba3ac88b01a741"
